maybe going insane, maybe not, idk